# orcaqd

./: .gitignore  .gitmodules  README.md  paper1.md  paper2.md  pyproject.toml  setup.md
assets/mjcf/mjx/: orcahand_right_mjx.mjcf
configs/: paper1_budget.yaml  paper1_ga_baseline.yaml  paper1_main.yaml  paper1_medium.yaml  paper1_quick_test.yaml  paper1_short.yaml  paper1_smoke.yaml
mjx/: orcahand_right_mjx.mjcf  scene_right_mjx.xml
orcahand/: scene_combined.xml  scene_left.xml
orcahand/models/assets/: scene.xml
orcahand/models/mjcf/: orcahand_left.mjcf  orcahand_right.mjcf
orcahand/models/urdf/: orcahand_right.urdf
scripts/: bench.py  build_mjcf.py  build_mjx_mjcf.py  diagnose_pg.py  preview.py  render_preview.py  smoke_test.py  view.py  visualize.py
src/: __init__.py  cloud.py  jax_env.py  modal_app.py
src/envs/: __init__.py  bd_extractors.py  dex_env.py  hand_config.py  orcahand_mjx_env.py
src/qd_engine/: __init__.py  pg_emitter.py  train.py  train_pga_map_elites.py
tests/: test_bd_extractors.py  test_env.py  test_mjx_model.py
