[project]
name = "orcaqd"
version = "0.1.0"
description = "Quality-Diversity RL for the OrcaHand v2 dexterous manipulator"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "mujoco>=3.8.1,<4.0",
    "mujoco-mjx>=3.8.1,<4.0",
    "jax>=0.4.28",
    "flax>=0.8.5",
    "optax>=0.2.4",
    "chex>=0.1.86",
    "qdax>=0.5.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "wandb>=0.18",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "tqdm>=4.66",
]

[project.optional-dependencies]
cuda = ["jax[cuda13]>=0.4.28"]
cuda12 = ["jax[cuda12]>=0.4.28"]
agentic = ["openai>=1.40", "anthropic>=0.34", "pillow>=10.0"]
dev = ["pytest>=8.0", "ruff>=0.5", "modal>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"
